--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,21 @@
 h1 {
     color: #6e6e6e;
 }
+
+.button {
+    padding: 5px 20px;
+    text-align: center;
+    font-size: 16px;
+    margin: 6px 0px;
+    transition-duration: 0.1s;
+    cursor: pointer;
+    background-color: white;
+    color: #6e6e6e;
+    border: 2px solid #6e6e6e;
+    font-weight: bold;
+}
+
+.button:hover {
+    background-color: #6e6e6e;
+    color: white;
+}
